Fixing spacing

--- a/css/format.css
+++ b/css/format.css
@@ -8,6 +8,7 @@
 
 .col-lg-12 {
     padding-left: none;
+    margin-left: -2%;
 }
 
 #info {
